# sdl2-gl3-stub

./: 60CA7CFA5C93D44C.gpg  AC86D5BADFD686D3.gpg  CMakeLists.txt  README.md  sdl2-gl3-stub.xml
res/: cube.dae
shaders/: phong.frag  phong.vert  triangles.frag  triangles.vert
shaders/postprocessing/: noop.frag  noop.vert
src/: assimploader.cpp  assimploader.h  camera.cpp  camera.h  glrenderer.cpp  glrenderer.h  helpers.h  loadshaders.cpp  loadshaders.h  main.cpp  mesh.h  node.h  openglscene.cpp  openglscene.h  postprocess.cpp  postprocess.h  sdleventshandler.cpp  sdleventshandler.h  shader.cpp  shader.h
